# Custom-Memory-Allocator

./: .clang-format  .clang-tidy  .gitignore  .~lock.run_log.txt#  CMakeLists.txt  README.md  allocator_logs.txt  build.sh  heaptrack.allocator_benchmark.37729.zst  mise.toml  run.sh  run_log.txt
benchmarks/: benchmarks.cpp
documentation/mermaid/: allocator_engine.mmd  allocator_registry.mmd  execution_flow.mmd  handle_system.mmd  integeration.mmd  integeration_fallback.mmd  linear_module.mmd  pool_module.mmd  system_architecture.mmd
documentation/reports/: PERFORMACE_REPORT.md  bencmark_results.txt  cachegrind_report.txt  heaptrack.allocator_benchmark.88968.zst  heaptrack_report.txt  perf_report.txt  perf_stat.txt
include/Core/: core.h
include/modules/: allocation_stats.h  allocator_engine.h  allocator_handle_system.h  allocator_registry.h
include/modules/strategies/linear_module/: linear_module.h  linear_scopes.h  linear_strategy.h
include/modules/strategies/pool_module/: pool_module.h  pool_scopes.h  pool_strategy.h
include/utilities/: allocator_utility.h
main/: main.cpp
src/modules/: allocator_engine.cpp  allocator_handle_system.cpp  allocator_registry.cpp
src/modules/strategies/linear_module/: linear_module.cpp  linear_strategy.cpp
src/modules/strategies/pool_module/: pool_module.cpp  pool_strategy.cpp
src/utilities/: allocator_utility.cpp
tests/: test_logs.txt  test_logs_debug.txt  test_logs_release.txt  test_results_debug.txt  test_results_release.txt  tests.cpp
